logs/pyblosxom.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pyblosxom'...
Listing './lib/python3.5/site-packages/Pyblosxom/cache'...
Compiling './lib/python3.5/site-packages/Pyblosxom/commandline.py'...
***   File "./lib/python3.5/site-packages/Pyblosxom/commandline.py", line 114
    print "Creating %d entries" % num_entries
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Pyblosxom/data'...
Listing './lib/python3.5/site-packages/Pyblosxom/entries'...
Listing './lib/python3.5/site-packages/Pyblosxom/flavours'...
Listing './lib/python3.5/site-packages/Pyblosxom/flavours/atom.flav'...
Listing './lib/python3.5/site-packages/Pyblosxom/flavours/error.flav'...
Listing './lib/python3.5/site-packages/Pyblosxom/flavours/html.flav'...
Listing './lib/python3.5/site-packages/Pyblosxom/flavours/rss.flav'...
Listing './lib/python3.5/site-packages/Pyblosxom/flavours/rss20.flav'...
Compiling './lib/python3.5/site-packages/Pyblosxom/memcache.py'...
***   File "./lib/python3.5/site-packages/Pyblosxom/memcache.py", line 55
    print repr((args, kwargs))
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Pyblosxom/plugins'...
Compiling './lib/python3.5/site-packages/Pyblosxom/plugins/acronyms.py'...
***   File "./lib/python3.5/site-packages/Pyblosxom/plugins/acronyms.py", line 189
    except re.error, s:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Pyblosxom/plugins/comments.py'...
***   File "./lib/python3.5/site-packages/Pyblosxom/plugins/comments.py", line 869
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Pyblosxom/plugins/pages.py'...
***   File "./lib/python3.5/site-packages/Pyblosxom/plugins/pages.py", line 218
    exec codeblock in localsdict, globalsdict
                 ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/Pyblosxom/plugins/paginate.py'...
***   File "./lib/python3.5/site-packages/Pyblosxom/plugins/paginate.py", line 277
    print "   rendering page %s ..." % (template % i)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Pyblosxom/plugins/tags.py'...
***   File "./lib/python3.5/site-packages/Pyblosxom/plugins/tags.py", line 357
    print "working on %s..." % mem
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Pyblosxom/pyblosxom.py'...
***   File "./lib/python3.5/site-packages/Pyblosxom/pyblosxom.py", line 237
    print response.read()
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Pyblosxom/renderers'...
Compiling './lib/python3.5/site-packages/Pyblosxom/renderers/blosxom.py'...
***   File "./lib/python3.5/site-packages/Pyblosxom/renderers/blosxom.py", line 303
    except NoSuchFlavourException, nsfe:
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Pyblosxom/tests'...
Compiling './lib/python3.5/site-packages/Pyblosxom/tests/__init__.py'...
***   File "./lib/python3.5/site-packages/Pyblosxom/tests/__init__.py", line 65
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Pyblosxom/tests/test_akismetcomments.py'...
***   File "./lib/python3.5/site-packages/Pyblosxom/tests/test_akismetcomments.py", line 125
    print akismet.Akismet.comment_check_error
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Pyblosxom/tests/test_pyfilenamemtime.py'...
***   File "./lib/python3.5/site-packages/Pyblosxom/tests/test_pyfilenamemtime.py", line 29
    print mtime, mem[1]
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Pyblosxom/tools.py'...
***   File "./lib/python3.5/site-packages/Pyblosxom/tools.py", line 132
    print starter + linesep.join(textwrap.wrap(s, 72))
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyblosxom-1.5.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
